tests/03-typecheck/01-data-redefined.sl
data int extern

data int (something x)
data ivec2 (int a, int b)
data ivec2 (int x, int y)
